# actionq

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  actionq.dispatch.json  pyproject.toml
.agents/: project.generated.md
.agents/overlays/: actionq.state-protocols.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
actionq/: application.py  cli.py  daemon.py  db.py  git_evidence.py  routing.py  schema.py  server.py  session_wrapper.py  usage_limit.py  vuoro.py
actionq/harnesses/: __init__.py  base.py  claude.py  codex.py  copilot.py  opencode.py
actionq/migrations/: 001_init.sql  __init__.py
docs/contracts/: vuoro-execution-adapter.md
docs/operations/: schema-migrations.md
docs/plans/: actionq-server-daemon-workstream-c-plan.md  vuoro-served-execution-alignment.md
docs/protocols/: action-lifecycle.md
examples/: actionq-daemon.toml
ops/systemd/: actionq-daemon.service
tests/: conftest.py  test_claim_authority.py  test_daemon.py  test_daemon_audit.py  test_daemon_context.py  test_daemon_crash_evidence.py  test_daemon_integration.py  test_daemon_routing.py  test_daemon_usage_limit.py  test_git_evidence.py  test_harnesses.py  test_integration_postgres.py  test_routing.py  test_schema.py  test_session_wrapper.py  test_unit.py  test_usage_limit.py  test_verification_contracts.py  test_vuoro_adapter_integration.py
tests/fixtures/: actionq_legacy_v1.sql
verification/contexts/: action-claim-concurrency.json  schema-migration-compatibility.json
