[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "actionq"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "psycopg[binary]>=3.1",
]

[project.scripts]
actionctl = "actionq.cli:cli"

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools]
packages = ["actionq"]

[tool.setuptools.package-data]
actionq = ["migrations/*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
